feat: Enhance `safeFetch` to automatically set JSON headers and stringify bodies, correct the `BACKEND_URL` fallback, and add Vite client types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "types": [
       "node",
       "react",
-      "react-dom"
+      "react-dom",
+      "vite/client"
     ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
